--- a/yehonatanAndTomChessProject/yehonatanAndTomChessProject.vcxproj
+++ b/yehonatanAndTomChessProject/yehonatanAndTomChessProject.vcxproj
@@ -19,10 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Board.h" />
     <ClInclude Include="chessPiece.h" />
+    <ClInclude Include="Manager.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Square.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="chessPiece.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Manager.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Square.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
