--- a/yehonatanAndTomChessProject/yehonatanAndTomChessProject.vcxproj
+++ b/yehonatanAndTomChessProject/yehonatanAndTomChessProject.vcxproj
@@ -22,6 +22,9 @@
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="ChessPiece.h" />
+    <ClInclude Include="FrontEndGraphicsInterafce\Pipe.h" />
+    <ClInclude Include="FrontEndGraphicsInterafce\stdafx.h" />
+    <ClInclude Include="FrontEndGraphicsInterafce\targetver.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
     <ClInclude Include="Manager.h" />
@@ -35,6 +38,8 @@
     <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="ChessPiece.cpp" />
+    <ClCompile Include="FrontEndGraphicsInterafce\Source.cpp" />
+    <ClCompile Include="FrontEndGraphicsInterafce\stdafx.cpp" />
     <ClCompile Include="King.cpp" />
     <ClCompile Include="Knight.cpp" />
     <ClCompile Include="Main.cpp" />
